clusters/talos-robbinsdale/apps/home/app/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  # annotations:
  #   external-dns.alpha.kubernetes.io/hostname: frigate.lukehouge.com
  labels:
    app: frigate
spec:
  selector:
    app: frigate
  ports:
    - name: web
      port: 443
      targetPort: 8971
    - name: rtsp
      port: 8554
      targetPort: 8554
    - name: stream-8555-tcp
      port: 8555
      targetPort: 8555
      protocol: TCP
    - name: stream-8555-udp
      port: 8555
      targetPort: 8555
      protocol: UDP
    - name: internal
      port: 5000
      targetPort: 5000
  type: ClusterIP
