clusters/talos-robbinsdale/apps/home/app/frigate/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: home
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
      sectionName: luke-wildcard-https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
      sectionName: luke-wildcard-https
  hostnames:
    - "frigate.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: frigate
          port: 5000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
